--- a/templates/main.html
+++ b/templates/main.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Main Page</title>
 </head>
 <body>
-    {% include 'nav.html'%}
-    <h1>
-        Hy guys! This is Home Page.......
-    </h1>
+    {% include 'nav.html' %}
+
+    {% block content %}
+
+    {% endblock %}
 
 </body>
 </html>
