--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -20,7 +20,10 @@
         <div>
             {% for i in obj%}
                 <div>
-                    <h1>Hello {{i}} .</h1>
+                    <h1>
+                        <a href="index/{{i.id}}">
+                        Hello {{i.name}} .</h1>
+                        </a>
                 </div>
             {% endfor %}
         </div>
