--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -15,6 +15,8 @@
         Hy guys! This is the index page...............
     </h1>
 
+    <h1>Hello {{obj.name}}!!!</h1>
+
     {% endblock content %}
 
 
