--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -21,7 +21,7 @@
             {% for i in obj%}
                 <div>
                     <h1>
-                        <a href="index/{{i.id}}">
+                        <a href="{% url 'index' i.id %}">
                         Hello {{i.name}} .</h1>
                         </a>
                 </div>
