--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -1,13 +1,15 @@
+{% extends 'main.html'%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index Page</title>
+    {% block title %}  
+        {{ obj.name }}
+    {% endblock%}
 </head>
 <body>
-    {% extends 'main.html'%}
 
     {% block content %}
 
@@ -16,6 +18,8 @@
     </h1>
 
     <h1>Hello {{obj.name}}!!!</h1>
+
+    <h3>{{obj.description}}</h3>
 
     {% endblock content %}
 
