Database updation with form

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -10,6 +10,7 @@
     {% extends 'main.html'%}
 
     {% block content %}
+    <h1><a href="{% url 'forms' %}">Add new</a></h1>
     <h1>
         Hy guys! This is Home Page.......
     </h1>
@@ -29,6 +30,8 @@
         </div>
 
     </div>
+
+    
 
     {% endblock content %}
 
