--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -9,7 +9,12 @@
 <body>
     {% extends 'main.html'%}
 
+
     {% block content %}
+    
+    <h1><a href="{% url 'user'%}"> User page</a></h1>
+
+
     <h1><a href="{% url 'forms' %}">Add new</a></h1>
     <h1>
         Hy guys! This is Home Page.......
