--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,46 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-</head>
-<body>
-    {% extends 'main.html'%}
+{% extends 'main.html'%}
+{% load static %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/home.css' %}">
+{% endblock %}
 
 
-    {% block content %}
-    
-    <h1><a href="{% url 'user'%}"> User page</a></h1>
+{% block content %}
+<h1>
+    Hy guys! This is Home Page.......
+</h1>
 
 
-    <h1><a href="{% url 'forms' %}">Add new</a></h1>
-    <h1>
-        Hy guys! This is Home Page.......
-    </h1>
-
+<div>
 
     <div>
-
-        <div>
-            {% for i in obj%}
-                <div>
-                    <h1>
-                        <a href="{% url 'index' i.id %}">
-                        Hello {{i.name}} .</h1>
-                        </a>
-                </div>
-            {% endfor %}
-        </div>
-
+        {% for i in obj%}
+            <div>
+                <h1>
+                    <a href="{% url 'index' i.id %}">
+                    Hello {{i.name}} .</h1>
+                    </a>
+            </div>
+        {% endfor %}
     </div>
 
-    
-
-    {% endblock content %}
+</div>
 
 
 
-</body>
-</html>
+{% endblock content %}
+
+
