--- a/templates/main.html
+++ b/templates/main.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
+
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    {% block css %}  {% endblock %}
     <title>{% block title %}   {% endblock%}</title>
 </head>
 <body>
-    {% include 'nav.html' %}
+    <header id="header">
+        <h1><a href="{% url 'home' %}">Home</a></h1>
+        <h1><a href="{% url 'login'%}">Login</a></h1>
+        <h1 id="mid"><a href="{% url 'signup' %}">Signup</a></h1>
+        <h1 id="mid"><a href="{% url 'user'%}"> User page</a></h1>
+        <h1><a href="{% url 'forms' %}">Add new</a></h1>
+    </header>
 
     {% block content %}
 
